# Construct

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  REUSE.toml  flake.nix  gnu-coding-standards.skill  gnu-free-software.skill  guile-guidelines.skill  microsoft-rust-guidelines.skill  nix-shell-provisioner.skill  pure-fsf-gnu.skill  rust-guidelines.skill  spacecraft-accessibility-support.skill  spacecraft-accessibility.skill  spacecraft-ada-guidelines.skill  spacecraft-agentic-cli.skill  spacecraft-brand-guidelines.skill  spacecraft-carbon-guidelines.skill  spacecraft-chez-guidelines.skill  spacecraft-clang-guidelines.skill  spacecraft-cli-preference.skill  spacecraft-cli-shell.skill  spacecraft-cli-standard.skill  spacecraft-clojure-guidelines.skill  spacecraft-commonlisp-guidelines.skill  spacecraft-cpp-guidelines.skill  spacecraft-dartflutter-guidelines.skill  spacecraft-document-format.skill  spacecraft-elixir-guidelines.skill  spacecraft-erlang-guidelines.skill  spacecraft-gleam-guidelines.skill  spacecraft-golang-guidelines.skill  spacecraft-guile-guidelines.skill  spacecraft-java-guidelines.skill  spacecraft-kotlin-guidelines.skill  spacecraft-lua-guidelines.skill  spacecraft-markdown-document.skill  spacecraft-missing-pkg.skill  (+24 more)
.claude/: settings.local.json
.githooks/: check-description-length.py  pre-commit
Excluded/: skill.ps1
android-skills/: CREDITS.md  README.md
construct-cli/: .gitignore  AGENTS.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  SKILL.md
construct-cli/registry/: agents.toml
construct-cli/src/: cli.rs  context.rs  main.rs  manifest.rs  time.rs
construct-cli/src/commands/: agent.rs  describe.rs  explore.rs  mod.rs  schema.rs  ship.rs  skill.rs  sync.rs
construct-cli/src/install/: mod.rs  plan.rs
construct-cli/src/output/: envelope.rs  error.rs  mod.rs  mode.rs  render.rs  theme.rs
construct-cli/src/registry/: detect.rs  mod.rs
construct-cli/src/sources/: mod.rs  skillmd.rs
construct-cli/src/tui/: mod.rs
construct-cli/tests/: cli.rs  install.rs  ship.rs  sources.rs
gnu-coding-standards/: CREDITS.md  SKILL.md
gnu-free-software/: ATTRIBUTION.md  CREDITS.md  SKILL.md
grok-skills/: README.md  gfm-markdown.skill
guile-guidelines/: SKILL.md
microsoft-rust-guidelines/: CREDITS.md  SKILL.md
nix-shell-provisioner/: SKILL.md
pure-fsf-gnu/: CREDITS.md  SKILL.md
rust-guidelines/: CREDITS.md  Rust-Guidelines.md  SKILL.md
spacecraft-accessibility/: SKILL.md
spacecraft-accessibility-support/: SKILL.md
spacecraft-ada-guidelines/: CREDITS.md  SKILL.md
spacecraft-agentic-cli/: SKILL.md
spacecraft-brand-guidelines/: SKILL.md
spacecraft-carbon-guidelines/: SKILL.md
spacecraft-chez-guidelines/: SKILL.md
spacecraft-clang-guidelines/: SKILL.md
spacecraft-cli-preference/: CREDITS.md  SKILL.md
spacecraft-cli-shell/: SKILL.md
spacecraft-cli-standard/: SKILL.md
spacecraft-clojure-guidelines/: SKILL.md
spacecraft-commonlisp-guidelines/: SKILL.md
spacecraft-cpp-guidelines/: SKILL.md
spacecraft-dartflutter-guidelines/: SKILL.md
spacecraft-document-format/: SKILL.md
spacecraft-elixir-guidelines/: SKILL.md
spacecraft-erlang-guidelines/: SKILL.md
spacecraft-gleam-guidelines/: SKILL.md
spacecraft-golang-guidelines/: SKILL.md
spacecraft-guile-guidelines/: SKILL.md
spacecraft-java-guidelines/: SKILL.md
spacecraft-kotlin-guidelines/: SKILL.md
spacecraft-lua-guidelines/: SKILL.md
spacecraft-markdown-document/: SKILL.md
(+280 files in other folders)
