# SPDX-FileCopyrightText: 2026 Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>
# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "construct"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Spacecraft Software Construct skills package manager (CLI + TUI)"
homepage = "https://Construct.SpacecraftSoftware.org/"
repository = "https://github.com/Spacecraft-Software/Construct"
documentation = "https://Construct.SpacecraftSoftware.org/"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Mohamed Hammad <Mohamed.Hammad@SpacecraftSoftware.org>"]
keywords = ["skills", "agents", "cli", "spacecraft", "nix"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "construct"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
toml = "0.8"
# Only the UTC `Timestamp` + `std` clock are used; trimming default features
# drops the optional `defmt` integration (and its unmaintained transitive deps).
jiff = { version = "0.2", default-features = false, features = ["std"] }
owo-colors = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

# Stability- and size-oriented release profile (Standard §3). `target-cpu=native`
# is deliberately NOT set here: this crate is distributed as a portable Nix
# package built for a generic baseline, so a native pin would be non-reproducible
# across machines. Set it via `RUSTFLAGS` for local-only builds if desired.
[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# Static-verification lint posture mandated by the Microsoft Pragmatic Rust
# Guidelines (universal §M-STATIC-VERIFICATION) plus a small set of documented
# opt-outs for lints that are noise in an application binary.
[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# `restriction` group members — opt in individually for consistency and brevity.
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unused_result_ok = "warn"
# May fight structured/format-string usage otherwise.
literal_string_with_formatting_args = "allow"
# Documented opt-outs (application binary, not a library):
#   - transitive dep version skew is outside our control
#   - `output::OutputMode`-style names read clearly here
#   - the CLI global-flag struct is intentionally a flat bag of bools
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
